--- a/src/main/resources/static/css/service_style.css
+++ b/src/main/resources/static/css/service_style.css
@@ -68,25 +68,32 @@
     height: 38px !important;
 }
 
+.chatEZ_list table {
+    width: 100%;             /* 테이블의 전체 너비를 지정합니다. 필요에 따라 조정 가능합니다. */
+    table-layout: fixed;     /* 각 셀의 너비를 정확하게 지정하도록 설정합니다. */
+}
 
 .chatEZ_list table tr th{
-    width: 100px;
     padding: 10px 0;
     text-align: center;
     font-size: 22px;
 }
 
 .chatEZ_list table tr th:nth-child(1){
-    width: 150px;
+    width: 8%;
 }
 
 .chatEZ_list table tr th:nth-child(2){
     /*padding-right:20px;*/
-    width: 180px;
+    width: 25%;
 }
 
 .chatEZ_list table tr th:nth-child(3){
-    width: 320px;
+    width: 35%;
+}
+
+.chatEZ_list table tr th:nth-child(n+4):nth-child(-n+6){
+    width: 125px;
 }
 
 .chatEZ_list table tr td{
@@ -94,20 +101,25 @@
     text-align: center;
     font-size: 18px;
     background-color: #ddd;
+    text-align: center; /* 텍스트를 가로로 중앙 정렬 */
+    vertical-align: middle; /* 텍스트를 세로로 중앙 정렬 */
 }
+
 .chatEZ_list table tr td:nth-child(2){
-    width: 220px;
+    width: 240px;
 }
-.chatEZ_list table tr td a{
-    width: 300px;
+
+.chatEZ_list table tr td a {
+    min-width: 300px;
+    max-width: 460px;
     display: block;
-    overflow-wrap: break-word;
+    box-sizing: border-box;
+    word-wrap: break-word;
 }
 
 .chatEZ_list tr td button{
     width: 100px;
 }
-
 
 .chatEZ_list .btn-light{
     background-color: #FFF;
@@ -139,9 +151,9 @@
 }
 
 .chat_list{
-    min-width: 350px; /* 추가된 부분 */
+    min-width: 370px; /* 추가된 부분 */
     float: left;
-    width: 23%;
+    width: 28;
     height: 85vh;
     background-color: #fff;
     border-radius: 20px;
@@ -157,6 +169,7 @@
 .chat_list h2{
     padding-bottom: 10px;
     border-bottom: 2px solid #ddd;
+    font-size: 22px;
 }
 
 .chat_list h2 img{
@@ -169,14 +182,24 @@
 }
 
 .chatez_get_file {
-    width: 310px;
+    width: 334px;
     height: 80px;
     border-radius: 20px;
-    font-size: 22px;
+    font-size: 18px;
     padding: 10px;
     background-color: #fff;
     margin-bottom:10px;
     text-align:left;
+    border: none;
+    display: flex;             /* Flexbox 레이아웃을 적용합니다. */
+    align-items: center;      /* 항목들을 중앙에 정렬합니다. */
+    justify-content: flex-start;  /* 항목들을 왼쪽부터 시작하도록 정렬합니다. */
+    gap: 10px;                /* 이미지와 텍스트 사이에 간격을 줍니다. */
+}
+
+
+.chatez_get_file span{
+
 }
 
 .chatez_get_file:hover{
@@ -188,7 +211,7 @@
 }
 
 .chat_list ul li img{
-    margin-right: 20px;
+    margin-right: 10px;
     vertical-align: middle;
 }
 
@@ -206,7 +229,7 @@
     min-width: 1030px;
     font-size: 22px;
     float: right;
-    width: 75%;
+    width: 73%;
     height: 85vh;
     background-color: #fff;
     border-radius: 20px;
@@ -264,13 +287,14 @@
 
 #file_index ul li:nth-child(n+3):nth-child(-n+5){
     text-align: center;
-     width: 15%;
+    width: 15%;
 }
+
 
 #newScreen.panel {
     bottom:60px;
     position: fixed;
-    right: -160%;
+    right: -170%;
     width: 800px;
     height: 650px;
     background: #fff;
@@ -387,7 +411,6 @@
     vertical-align: middle;
     width: 54px;
     height: 54px;
-    margin-left:20px;
 }
 
 #imageContainer{
