--- a/src/main/resources/templates/service/service_layout.html
+++ b/src/main/resources/templates/service/service_layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" th:href="@{css/style.css}">
     <link rel="stylesheet" th:href="@{css/service_style.css}">
     <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>ChatEz - 새벽배송보다 빠른 대화형 AI생성 서비스</title>
 </head>
 <body>
@@ -37,6 +38,8 @@
         <div><th:block layout:fragment="content"></th:block></div>
     </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
 <script src="/js/service_script.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
