--- a/src/main/resources/static/css/service_style.css
+++ b/src/main/resources/static/css/service_style.css
@@ -197,11 +197,6 @@
     gap: 10px;                /* 이미지와 텍스트 사이에 간격을 줍니다. */
 }
 
-
-.chatez_get_file span{
-
-}
-
 .chatez_get_file:hover{
     background-color: #ddd;
 }
@@ -218,6 +213,9 @@
 .file_manager h3{
     padding-bottom: 10px;
     border-bottom: 2px solid #ddd;
+    display: flex;
+    justify-content: space-between; /* 항목을 양쪽 끝으로 배치합니다 */
+    align-items: center; /* 항목을 수직으로 정렬하려면 사용 */
 }
 
 .file_manager h3 img {
@@ -233,7 +231,54 @@
     height: 85vh;
     background-color: #fff;
     border-radius: 20px;
-    padding: 30px 20px 30px 20px;
+    padding: 20px;
+}
+
+#file_select:disabled {
+    background-color: #ddd; /* 회색으로 변경 */
+    cursor: not-allowed; /* 커서를 '금지' 아이콘으로 변경 */
+}
+
+#file_select:enabled {
+    background-color: #3366FF; /* 푸른색으로 변경 */
+    cursor: pointer; /* 커서를 '손가락' 아이콘으로 변경 */
+}
+
+.file_manager #file_select {
+    font-size:22px;
+    width: 230px;
+    height: 80px;
+    border-radius: 20px;
+    border: none;
+    color: #FFF;
+}
+
+#file_delete_button{
+    float:right;
+    font-size:22px;
+    width: 230px;
+    height: 80px;
+    border-radius: 20px;
+    border: none;
+    color: #000;
+    margin-top:20px;
+}
+
+#file_delete_button img{
+    vertical-align: middle;
+    margin-right: 20px;
+    width: 44px;
+    height: 44px;
+}
+
+#file_delete_button:disabled {
+    background-color: #ddd;
+    cursor: not-allowed;
+}
+
+#file_delete_button:enabled {
+    background-color: #bbb;
+    cursor: pointer;
 }
 
 .file_list input{
@@ -246,6 +291,18 @@
     margin-left: 20px;
     width: 44px;
     height: 44px;
+}
+
+.file_list{
+    position: relative;
+    height:650px;
+}
+
+#file_delete{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-top: 2px solid #ddd;
 }
 
 #file_index ul{
@@ -305,7 +362,7 @@
     font-size: 22px;
 }
 
-#fileUpload{
+.panel_right #fileUpload{
     width: 230px;
     height: 80px;
     background-color: #3366FF;
