파일업로드 수정

--- a/src/main/resources/templates/service/file_manager.html
+++ b/src/main/resources/templates/service/file_manager.html
@@ -6,6 +6,7 @@
             <li th:each="myServices : ${myServices}">
                 <button class="chatez_get_file"
                         th:data-service-name="${myServices.serviceName}"
+                        th:data-service-id="${myServices.serviceId}"
                         onclick="showFilesForService(this)">
                     <img th:src="|https://${bucket}.s3.ap-northeast-2.amazonaws.com/${folder}/${myServices.profilePic}|" alt="chatbot_icon" class="chatbot_icon">
                     <span><span th:text="${myServices.serviceName}"></span></span>
@@ -19,7 +20,7 @@
                 <img th:src="@{img/manager_logo_on.png}" alt="manager_logo" class="manager_logo">파일 관리
             </span>
             <div>
-                <input type="file" id="fileInput" style="display: none;" accept=".txt,.pdf,.doc,.docx,.xls,.xlsx,.ppt,.pptx" multiple >
+                <input type="file" id="fileInput" style="display: none;" accept=".txt,.pdf,.doc,.docx,.xls,.xlsx,.csv" multiple >
                 <button id="file_select" disabled>
                     <img th:src="@{img/upload_icon.png}" alt="upload_icon" class="upload_icon">파일 선택
                 </button>
