--- a/src/main/resources/static/css/service_style.css
+++ b/src/main/resources/static/css/service_style.css
@@ -305,11 +305,17 @@
     border-top: 2px solid #ddd;
 }
 
+#file_index {
+    height: 480px;
+    overflow-y: auto;
+}
+
 #file_index ul{
     height: 70px;
     border-radius: 20px;
     background-color: #ddd;
     margin-bottom:10px;
+    margin-right:10px;
 }
 
 #file_title ul li{
@@ -701,7 +707,8 @@
 
 /* 스크롤바의 폭 너비 */
 #fileList::-webkit-scrollbar,
-.chat::-webkit-scrollbar{
+.chat::-webkit-scrollbar,
+#file_index::-webkit-scrollbar{
     width: 10px;
 }
 
@@ -711,12 +718,14 @@
 }
 
 #fileList::-webkit-scrollbar-thumb,
-.chat::-webkit-scrollbar-thumb{
+.chat::-webkit-scrollbar-thumb,
+#file_index::-webkit-scrollbar-thumb{
     background: #6289FF; /* 스크롤바 색상 */
     border-radius: 10px; /* 스크롤바 둥근 테두리 */
 }
 
 #fileList::-webkit-scrollbar-track,
-.chat::-webkit-scrollbar-track{
+.chat::-webkit-scrollbar-track,
+#file_index::-webkit-scrollbar-track{
     background: #ddd;  /*스크롤바 뒷 배경 색상*/
 }
