파일업로드 중일떄 새로고침하면 버튼이 비활성화되는 기능 구현

--- a/src/main/resources/static/css/service_style.css
+++ b/src/main/resources/static/css/service_style.css
@@ -305,12 +305,12 @@
     border-top: 2px solid #ddd;
 }
 
-#file_index {
+.file_index {
     height: 480px;
     overflow-y: auto;
 }
 
-#file_index ul{
+.file_index ul{
     height: 70px;
     border-radius: 20px;
     background-color: #ddd;
@@ -333,22 +333,22 @@
     width: 15%;
 }
 
-#file_index ul li{
+.file_index ul li{
     vertical-align: middle;
     padding-top: 15px;
     display: inline-block;
 }
 
-#file_index ul li img{
+.file_index ul li img{
     vertical-align: middle;
 }
 
-#file_index ul li:nth-child(2){
+.file_index ul li:nth-child(2){
     margin-left: 20px;
     width: 45%;
 }
 
-#file_index ul li:nth-child(n+3):nth-child(-n+5){
+.file_index ul li:nth-child(n+3):nth-child(-n+5){
     text-align: center;
     width: 15%;
 }
@@ -708,7 +708,7 @@
 /* 스크롤바의 폭 너비 */
 #fileList::-webkit-scrollbar,
 .chat::-webkit-scrollbar,
-#file_index::-webkit-scrollbar{
+.file_index::-webkit-scrollbar{
     width: 10px;
 }
 
@@ -719,13 +719,13 @@
 
 #fileList::-webkit-scrollbar-thumb,
 .chat::-webkit-scrollbar-thumb,
-#file_index::-webkit-scrollbar-thumb{
+.file_index::-webkit-scrollbar-thumb{
     background: #6289FF; /* 스크롤바 색상 */
     border-radius: 10px; /* 스크롤바 둥근 테두리 */
 }
 
 #fileList::-webkit-scrollbar-track,
 .chat::-webkit-scrollbar-track,
-#file_index::-webkit-scrollbar-track{
+.file_index::-webkit-scrollbar-track{
     background: #ddd;  /*스크롤바 뒷 배경 색상*/
 }
