--- a/src/main/resources/templates/service/file_manager.html
+++ b/src/main/resources/templates/service/file_manager.html
@@ -36,7 +36,7 @@
                     <li>업로드일</li>
                 </ul>
             </div>
-            <div id="file_index"
+            <div class="file_index"
                  th:each="servicesFiles : ${servicesFiles}"
                  th:data-service-name="${servicesFiles.key}"
                  style="display: none;">
