--- a/src/main/resources/templates/service/file_manager.html
+++ b/src/main/resources/templates/service/file_manager.html
@@ -7,6 +7,7 @@
                 <button class="chatez_get_file"
                         th:data-service-name="${myServices.serviceName}"
                         th:data-service-id="${myServices.serviceId}"
+                        th:disabled="${!myServices.serviceActive}"
                         onclick="showFilesForService(this)">
                     <img th:src="|https://${bucket}.s3.ap-northeast-2.amazonaws.com/${folder}/${myServices.profilePic}|" alt="chatbot_icon" class="chatbot_icon">
                     <span><span th:text="${myServices.serviceName}"></span></span>
